--- a/pom.xml
+++ b/pom.xml
@@ -109,10 +109,11 @@
             <plugin>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-maven-plugin</artifactId>
-                <version>6.5.5</version>
+                <version>7.0.0</version>
                 <configuration>
-                    <url>jdbc:h2:file:./target/foobar</url>
-                    <user>sa</user>
+                    <url>jdbc:postgresql://localhost:5432/postgres?useUnicode=true&amp;serverTimezone=UTC</url>
+                    <user>postgres</user>
+                    <password>root</password>
                 </configuration>
                 <dependencies>
                     <dependency>
